# research-agents

./: .env.example  .gitignore  AGENTS.md  BLUEPRINT.md  CLAUDE.md  README.md  pyproject.toml  review_summary.txt  run-agents.sh  run-autoresearch-nightly.sh  run-autoresearch-rollback-check.sh  run-experiments.py
auto_research/: __init__.py  __main__.py  claude_validator.py  committer.py  config.py  evaluator.py  ledger.py  mini_pipeline.py  mutator.py  ollama_client.py  query_seeds.json  runner.py
auto_research/data/: experiments.db
auto_research/tests/: test_evaluator.py  test_ledger.py  test_mini_pipeline.py  test_mutator.py
cron/: logrotate-research-agents  research-agents
data/: arxiv-signals-2026-03-14.json  chatgpt-analysis-2026-03-16.json  domain-watch-signals-2026-03-16.jsonl  perplexity_run_2026-03-15.json  run_summary_2026-03-17.json  signals-2026-03-16.json  signals_arxiv_hf_2026-03-17.json  signals_rss_scanner_2026-03-17.json  signals_tool_monitor_2026-03-17.json  tool-signals-2026-03-14.json  youtube-signals-2026-03-15.json  youtube_signals_2026-03-16.json
data/signals/: youtube_signals_2026-03-17.jsonl
data/trend_reports/: 2026-04-05.md  (+2 more)
logs/: autoresearch-nightly-2026-04-29.md
tests/: conftest.py  test_arxiv_scanner.py  test_domain_watcher.py  test_github_trending.py  test_idea_surfacer.py  test_manual_signal_writer.py  test_orchestrator_reflector.py  test_overlap_tracker.py  test_producthunt_scanner.py  test_reddit_scanner.py  test_rss_scanner.py  test_signal_writer.py  test_tool_monitor.py  test_trend_analyzer.py  test_youtube_scanner.py
(+127 files in other folders)
