[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-agents"
version = "0.1.0"
description = "Ambient research intelligence for the Snow-Town feedback loop"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "anthropic>=0.40",
    "typer>=0.12",
    "pydantic>=2.0",
    "rich>=13.0",
    "youtube-transcript-api>=0.6",
    "feedparser>=6.0",
    "google-genai>=1.0",
]

[project.scripts]
research-agents = "research_agents.runner:app"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-mock>=3.14",
    "ruff>=0.6",
    "mypy>=1.11",
]

[tool.hatch.build.targets.wheel]
packages = ["src/research_agents"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["tests/retired"]
